Third Commit with surefire plugin