@@ -5,8 +5,42 @@
   <version>1.0.0</version>
   <name>ParaBankCucumberMavenGithubHybrid</name>
   <description>ParaBank Cucumber Maven Github Project</description>
-  <dependencies>
-	  
+  <properties>
+	  <jre.level>1.7</jre.level>
+	  <jdk.level>1.7</jdk.level>
+  </properties>
+  <build>
+	  <plugins>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-compiler-plugin</artifactId>
+			  <version>3.11.0</version> <!-- auto generated-->
+			  <configuration>
+				  <fork>true</fork>
+				  <executable>C:\Program Files\Java\jdk1.8.0_202\bin\javac.exe</executable>
+				  <source>1.8</source>
+				  <target>1.8</target>
+			  </configuration>
+		  </plugin>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <version>3.1.2</version> <!-- Auto generated-->
+			  <configuration>
+				  <parallel>classes</parallel>
+				  <forkmode>Perthread</forkmode>
+				  <threadCount>3</threadCount>
+				  <reuseForks>true</reuseForks>
+				  <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				  <includes>
+					  <include>**/*Runner.java</include>
+				  </includes>
+			  </configuration>
+		  </plugin>
+	  </plugins>
+  </build>
+  
+  <dependencies>  
 	  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 	<dependency>
     <groupId>org.seleniumhq.selenium</groupId>
